@@ -1,3 +1,10 @@
+2001-06-09  Dave Peticolas  <dave@krondo.com>
+
+	* src/gnc-ui-util.c (gnc_find_or_create_equity_account): allow
+	group to be specified
+	(gnc_account_create_opening_balance): search in given account's
+	group
+
 2001-06-08  Dave Peticolas  <dave@krondo.com>
 
 	* src/gnc-ui-util.c (gnc_find_or_create_equity_account): first
